# FiDiCoM

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/include/core/edge/: edge_2.h  edge_2_filter.h  edge_3.h  edge_3_filter.h
cpp/include/core/geom/: spherical_geom_util.h
cpp/include/core/net/: astar_heuristic_2.h  astar_heuristic_3.h  net_2.h  net_3.h  rDn_2.h  rDn_3.h
cpp/include/core/node/: node_2.h  node_3.h
cpp/include/core/obstacle/: obstacle_2.h  obstacle_3.h
cpp/include/core/region/: region_2.h  region_3.h
cpp/include/core/util/: arithmetic_util.h  random_engine.h  std_list_util.h  std_out_util.h  std_string_util.h  std_unordered_set_util.h  std_vector_util.h  union_find.h
cpp/include/core/weight_mapper/: weight_mapper_2.h  weight_mapper_3.h
cpp/include/domain/flp/: SA.h  fslp_SA.h  net_fslp.h  net_wp.h  wp_SA.h
cpp/include/domain/wtsn/: edge_2_wtsn.h  pedestrian.h  rDn_2_wtsn.h  region_2_wtsn.h  simulator_wtsn.h  weight_passability_wtsn.h
cpp/include/project/TRF_SI_2025/: simulation_msu.h
cpp/src/: CMakeLists.txt
cpp/src/app/: CMakeLists.txt  main.cpp
cpp/src/core/: CMakeLists.txt
cpp/src/core/edge/: CMakeLists.txt  edge_2.cpp  edge_2_filter.cpp  edge_3.cpp  edge_3_filter.cpp
cpp/src/core/geom/: CMakeLists.txt  spherical_geom_util.cpp
cpp/src/core/net/: CMakeLists.txt  net_2.cpp  net_3.cpp  rDn_2.cpp  rDn_3.cpp
cpp/src/core/node/: CMakeLists.txt  node_2.cpp  node_3.cpp
cpp/src/core/obstacle/: CMakeLists.txt  obstacle_2.cpp  obstacle_3.cpp
cpp/src/core/region/: CMakeLists.txt  region_2.cpp
cpp/src/core/util/: CMakeLists.txt  arithmetic_util.cpp  std_out_util.cpp
cpp/src/core/weight_mapper/: CMakeLists.txt  weight_mapper_2.cpp  weight_mapper_3.cpp
cpp/src/domain/: CMakeLists.txt
cpp/src/domain/flp/: CMakeLists.txt  fslp_SA.cpp  net_fslp.cpp  net_wp.cpp  wp_SA.cpp
cpp/src/domain/wtsn/: CMakeLists.txt  edge_2_wtsn.cpp  pedestrian.cpp  rDn_2_wtsn.cpp  region_2_wtsn.cpp  simulator_wtsn.cpp  weight_passability_wtsn.cpp
cpp/src/project/: CMakeLists.txt
cpp/src/project/TRF_SI_2025/: CMakeLists.txt  simulation_msu.cpp
docker/: Dockerfile
